Finially fixed size issues on mobile by just using the viewport meta tag like I should have done in the first place

--- a/template/default/css/tufte.css
+++ b/template/default/css/tufte.css
@@ -341,7 +341,6 @@ div.index div.group li
             margin-right: 1%; 
           }
       html {
-        font-size: 20px;
       }
 
       p { width: 100% }
